@@ -6,4 +6,5 @@ source.encoding=UTF-8
 src.dir=.
 tags.asp=false
 tags.short=false
+testing.providers=
 web.root=.
