@@ -26,7 +26,7 @@
 
     <div id="leftofpage">
       <ul>
-        <li><a href="http://wiki.board18.org/w/Player%27s_Guide_V2.4">
+        <li><a href="http://wiki.board18.org/w/Player%27s_Guide">
             Player's Guide</a></li>
         <li><a href="http://wiki.board18.org/w/How_to_set_up_an_18xx_game_using_BOARD18">
             Game Setup</a></li>
